--- a/index.html
+++ b/index.html
@@ -10,8 +10,23 @@
 
 </head>
 <body>
-    
 
+  <div class="middle">
+
+    <!-- Slider Body -->
+    <div class="range-slider">
+        <input type="range" id="input-left" min="-5" max="5" value="-2">
+        <input type="range" id="input-right" min="-5" max="5" value="1">
+
+        <div class="slider">
+            <div class="track"></div>
+            <div class="range"></div>
+            <div class="thumb left"></div>
+            <div class="thumb right"></div>
+        </div>
+    </div>
+
+  </div>
 
     <!--Script-->
     <script src="script.js"></script>
