--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 <body>
 
   <div class="middle">
+    <div class="ticks">
+      <span class="tick">-5</span>
+      <span class="tick">-4</span>
+      <span class="tick">-3</span>
+      <span class="tick">-2</span>
+      <span class="tick">-1</span>
+      <span class="tick">0</span>
+      <span class="tick">1</span>
+      <span class="tick">2</span>
+      <span class="tick">3</span>
+      <span class="tick">4</span>
+      <span class="tick">5</span>
+    </div>
 
     <!-- Slider Body -->
     <div class="range-slider">
