--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 
   <div class="middle">
+
+    <!-- Vertical ticks (can be replaced by JS values) -->
     <div class="ticks">
       <span class="tick">-5</span>
       <span class="tick">-4</span>
@@ -26,6 +28,8 @@
       <span class="tick">5</span>
     </div>
 
+    <div class="arrow-left"></div>
+
     <!-- Slider Body -->
     <div class="range-slider">
         <input type="range" id="input-left" min="-5" max="5" value="-2">
@@ -39,9 +43,11 @@
         </div>
     </div>
 
+    <div class="arrow-right"></div>
+
   </div>
 
-    <!--Script-->
-    <script src="script.js"></script>
+  <!--Script-->
+  <script src="script.js"></script>
 </body>
 </html
